--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "expo": "~50.0.13",
+    "expo-asset": "~9.0.2",
+    "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-slider": "^0.11.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
